--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -14,8 +14,8 @@
   <div class="page">
     <nav class="top-bar">
       <ul class="menu">
-        <li><a href="#" class="link active">Principala</a></li>
-        <li><a href="#" class="link">Jucători</a></li>
+      <li><a href="{{url_for('sah.index')}}" class="link active">Principala</a></li>
+      <li><a href="{{url_for('sah.players')}}" class="link">Jucători</a></li>
         <li><a href="#" class="link">Noutăți</a></li>
         <li><a href="#" class="link">Email</a></li>
         <li><a href="#" class="link">Cabinet</a></li>
