--- a/myproject/static/main.css
+++ b/myproject/static/main.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+img {
+  display: block;
+}
+
 /* fonts {
   font-family: 'Nixie One', cursive;
   font-family: 'Noticia Text', serif;
@@ -46,16 +50,13 @@ ul.menu {
   padding: 5px 25px;
   margin-left: 5px;
 
-  border: 1px solid transparent;
 }
 
 .link.active {
-  border: 1px solid white;
   background-color: rgba(255, 255, 255, 0.2);
 }
 
 .link:hover {
-  border: 1px solid white;
   background-color: rgba(255, 255, 255, 0.2);
   transition: all .3s;
 }
@@ -147,6 +148,7 @@ ul.menu {
   margin-right: 5%;
   transition: all .5s;
 }
+
 /*****--------------------main-----------------*****/
 /*****--------------------jucatori-----------------*****/
 
@@ -176,7 +178,7 @@ ul.menu {
   background-size: cover;
 }
 
-.gerb img{
+.gerb img {
   z-index: 5;
   position: absolute;
   height: 35px;
@@ -186,14 +188,13 @@ ul.menu {
 
 .container-jucatori {
   position: relative;
-  border: 1px solid red;
   min-height: calc(100vh - 70px);
   width: 78%;
   margin: 0 auto;
+  padding-bottom: 200px;
 }
 
 .second-continer-jucatori {
-  border: 1px solid red;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -208,116 +209,54 @@ h1 {
   padding: 20px;
 }
 
+/*****--------------------card-----------------*****/
+/*****--------------------standart-----------------*****/
 .card {
+  background: #fff;
   overflow: hidden;
-  width: 24%;
-  padding-top: 30%;
 
-  position: relative;
   filter: drop-shadow(5px 5px 3px rgba(0, 0, 0, 0.3));
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
-/*****--------------------big-card-----------------*****/
-
-.big-card.active {
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  width: 49.4%;
-}
-
-.big-card {
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  width: 24%;
-
-  font-family: Ubuntu;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 300;
-  margin-bottom: 30px;
-}
-
-.bold {
-  font-weight: 700;
-}
-
-.big-frame {
+.frame {
   position: relative;
+  width: 18.5vw;
+  height: 24vw;
   overflow: hidden;
-  width: 100%;
-  height: auto;
 }
 
-.card img {
-  position: absolute;
-}
-
-.big-frame img { 
+.frame img {
   position: absolute;
   width: 100%;
   height: 100%;
-  display: block;
   object-fit: cover;
 }
 
-.big-card img:hover {
+.frame img:hover {
   transform: scale(1.3);
   transition: all .3s;
 }
 
 .details {
-  display: none;
-  flex-grow: 1;
-  padding: 10px;
-  width: 60%;
-  padding: 25px;
+  /* display: none; */
+  visibility: hidden;
 }
 
-.fide_link {
-  color: #2a3cdf;
-  text-decoration: none;
-}
-
-.rating-ELO {
-  display: block;
-  width: 100%;
-  border: 1px solid black;
-  margin-top: 10px;
-  border-radius: 5px;
-
-}
-
-.big-card .name {
+.name {
   position: absolute;
-  bottom: 20px;
-  border-radius: 10px;
+  bottom: 10px;
+  border-radius: 6px;
   background-color: #fff;
   width: 90%;
   margin: 0 5%;
-  padding: 15px;
+  padding: 10px 10px 12px;
   text-decoration: none;
   color: #000;
   font-family: Tenor Sans;
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
 }
-
-.big-card .name:hover {
-  width: 100%;
-  margin: -12% 0 0;
-  transition: all .4s;
-  border-radius: 0;
-}
-
-
-/*****--------------------big-card-----------------*****/
-
-
-
-
 
 .card .name:hover {
   width: 100%;
@@ -337,20 +276,113 @@ h1 {
   font-size: 10px;
 }
 
+/*****--------------------big-----------------*****/
+.big-card {
+  width: 100%;
+  display: flex;
+}
+
+.big-details {
+  /* flex-grow: 1; */
+  /* display: block; */
+  /* visibility: visible; */
+  padding: 25px;
+}
+
+.big-frame {
+  overflow: hidden;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.fide_link {
+  color: #2a3cdf;
+  text-decoration: none;
+}
+
+
 /*****--------------------corner img-----------------*****/
 
 .corner-img {
   position: absolute;
-  border: 1px solid red;
   bottom: 0;
   right: 0;
 
 }
 
 .corner-img img {
-  max-height: 250px;
+  max-height: 200px;
 }
 
 footer {
   height: 30px;
+}
+
+/*****--------------------jucator-----------------*****/
+/*****--------------------jucator-----------------*****/
+section {
+  width: 100%;
+}
+
+.section-title {
+  font-family: Tenor Sans;
+  font-style: normal;
+  font-weight: 400;
+
+}
+
+h1.section-title {
+  font-size: 50px;
+}
+
+h2.section-title {
+  font-size: 40px;
+  margin-left: 10px;
+  padding: 10px;
+}
+
+.chess-figure {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin: 3px 0px 0;
+}
+
+.chess-figure-big {
+  width: 40px;
+  height: 40px;
+}
+
+.grey {
+  background-color: #EEE;
+}
+
+.section-card {
+  width: 100%;
+  margin: 0;
+  font-size: 16px;
+  filter: drop-shadow(0px 0px 0px rgba(0, 0, 0, 0));
+}
+
+.section-content {
+  background-color: #fff;
+  color: #4F4F4F;
+  font-family: Tenor Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding: 20px;
+
+}
+hr {
+  color: #000;
+}
+.section-image {
+  width: 100%;
+  background-color: #fff;
 }
