--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -25,7 +25,7 @@
       <a href="#" class="text">Sah.md</a>
     </div>
     <div class="empty"></div>
-    <a href="#" class="subtitle">Cei mai buni sahisti ai Moldovei</a>
+    <a href="{{url_for('sah.players')}}" class="subtitle">Cei mai buni sahisti ai Moldovei</a>
   </div>
   <div class="kings">
   	<div class="white_king"></div>
