--- a/myproject/templates/jucator.html
+++ b/myproject/templates/jucator.html
@@ -14,6 +14,7 @@
       <img src="{{url_for('static', filename='img/gerb-md.png')}}" alt="gerb">
     </div>
     <ul class="menu">
+      <li><img class="menu-burger" src="{{url_for('static', filename='img/menu-burger.png')}}" alt=""></li>
       <li><a href="#" class="link">Principala</a></li>
       <li><a href="#" class="link active">Jucători</a></li>
       <li><a href="#" class="link">Noutăți</a></li>
