--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -16,8 +16,7 @@
     <ul class="menu">
       <li><a href="{{url_for('sah.index')}}" class="link">Principala</a></li>
       <li><a href="{{url_for('sah.players')}}" class="link">Jucători</a></li>
-      <li><a href="#" class="link">Noutăți</a></li>
-      <li><a href="#" class="link">Email</a></li>
+      <li><a href="#" class="link">Tari</a></li>
       <li><a href="#" class="link">Cabinet</a></li>
     </ul>
   </nav>
