--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -19,8 +19,8 @@
         </li>
         <li><a href="{{url_for('sah.index')}}" class="link">Principala</a></li>
         <li><a href="{{url_for('sah.players')}}" class="link">Jucători</a></li>
-        <li><a href="#" class="link">Tari</a></li>
-        <li><a href="#" class="link">Cabinet</a></li>
+        <li><a href="#" class="link">Alți jucatori</a></li>
+        <li><a href="#" class="link"></a></li>
       </ul>
     </nav>
     <div class="title">
