--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="board">
-  <nav class="flag-img">
+  <nav class="nav flag-img">
     <div class="gerb">
       <img src="{{url_for('static', filename='img/gerb-md.png')}}" alt="gerb">
     </div>
