--- a/myproject/static/main.css
+++ b/myproject/static/main.css
@@ -55,15 +55,17 @@ ul.menu {
   font-size: 18px;
   padding: 5px 25px;
   margin-left: 5px;
-
+  border: 1px solid transparent;
 }
 
 .link.active {
   background-color: rgba(255, 255, 255, 0.2);
+  border: 1px solid #fff;
 }
 
 .link:hover {
   background-color: rgba(255, 255, 255, 0.2);
+  border: 1px solid #fff;
   transition: all .3s;
 }
 
@@ -401,7 +403,7 @@ hr {
 }
 
 .page-item {
-  margin-left: 3px;
+  margin: 0 2px;
 }
 
 .page-item:hover .page-link {
@@ -421,6 +423,12 @@ hr {
   text-decoration: none;
   color: #000;
   border: 1px solid transparent;
+}
+.dots {
+  display: inline-block;
+  font-weight: bold;
+  padding: 0 10px;
+  margin-top: 5px;
 }
 
 /*****--------------------media-----------------*****/
