--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -19,7 +19,7 @@
       </li>
       <li><a href="{{url_for('sah.index')}}" class="link">Principala</a></li>
       <li><a href="{{url_for('sah.players')}}" class="link">Jucători</a></li>
-      <li><a href="#" class="link">Alți jucatori</a></li>
+      <li><a href="{{url_for('sah.other_players')}}" class="link">Alți jucatori</a></li>
       <li><a href="#" class="link"></a></li>
     </ul>
   </nav>
