--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -17,9 +17,9 @@
         <li>
           <img class="menu-burger" id='toggle_menu' src="{{url_for('static', filename='img/menu-burger.png')}}" alt="">
         </li>
-        <li><a href="{{url_for('sah.index')}}" class="link">Principala</a></li>
+        <li><a href="{{url_for('sah.index')}}" class="link active">Principala</a></li>
         <li><a href="{{url_for('sah.players')}}" class="link">Jucători</a></li>
-        <li><a href="#" class="link">Alți jucatori</a></li>
+        <li><a href="{{url_for('sah.other_players')}}" class="link">Alți jucatori</a></li>
         <li><a href="#" class="link"></a></li>
       </ul>
     </nav>
