--- a/myproject/templates/error_pages/403.html
+++ b/myproject/templates/error_pages/403.html
@@ -3,4 +3,5 @@
     <div class="jumbotron">
         <h1>403 ACCESS FORBIDDEN</h1>
     </div>
+    <div class="big-container"></div>
 {% endblock %}
