--- a/myproject/templates/player.html
+++ b/myproject/templates/player.html
@@ -23,7 +23,7 @@
           <a href="#" class="name">{{sahist.name}}</a>
         </div>
 
-        <div class="details big-details">
+        <div class="details big-details player-details">
           {% if sahist.dob %}
           <div class="date">
             <span class="bold">Дата рождения:</span><br>
