nav flag stretch

--- a/myproject/static/main.css
+++ b/myproject/static/main.css
@@ -181,7 +181,7 @@ ul.menu {
   width: 100%;
   min-height: 38px;
   background: url('img/Flag-Moldova bar.jpg') center center;
-  background-size: cover;
+  background-size: contain;
 }
 
 .gerb img {
@@ -626,15 +626,23 @@ hr {
   }
 
   .corner-img img {
-    max-height: 150px;
+    max-height: 120px;
   }
 }
 
 @media (max-width: 411px) {
 
-  .container-jucatori h1 {
-    font-size: 30px;
-    text-align: center;
+  .big-frame {
+    min-width: 90px;
+  }
+
+  .section-content {
+    line-height: 18px;
+    padding: 14px;
+  }
+
+  .container-jucatori {
+    padding-bottom: 130px;
   }
 
   div.big-details {
@@ -668,9 +676,13 @@ hr {
   .chess-figure {
     /* position: absolute; */
   }
-    .section-title {
+    h1.section-title {
     display: flex;
     align-items: center;
+    font-size: 22px;
+    padding: 12px;
+    margin-top: 30px;
+    font-size: 30px;
   }
 
 
